--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 <body>
     <div class="nav">
         <h3 class="nav_nav"><a href="#">HOME</a></h3>
-        <h3 class="nav_nav"><a href="./projects">PROJECTS</a></h3>
-        <h3 class="nav_nav"><a href="./about">ABOUT</a></h3>
+        <h3 class="nav_nav"><a href="projects.html">PROJECTS</a></h3>
+        <h3 class="nav_nav"><a href="about.html">ABOUT</a></h3>
     </div>
     <div class="title_section">
         <h1 id="title">a data <br>Fanatic<span id = "dot_typing_for_title"></span></h1>
