--- a/about.html
+++ b/about.html
@@ -23,8 +23,40 @@
             <a href="https://www.hackerrank.com/profile/kalyanram17"><img src="images/hackerrank.png" alt="hackerrank"></a>
         </div>
         <a href="https://mail.google.com/mail/u/1/?view=cm&fs=1&to=kalyanramemmidisetty@gmail.com&tf=1"><img class="mail_logo" src="images/gmail.png" alt="mail"></a>
-        <h4 class="resume">RESUME</h4>
+        <h4 class="resume"><a href="https://drive.google.com/drive/folders/1DHKtkqQiNeByzoinxdR-Kqo0LAm3BOWk?usp=sharing">RESUME</a></h4>
     </div>
 
+    <div class="information">
+        <span class="motivation">
+            <h3 class="cub_title">MOTIVATION</h3>
+            <h4 class="info">Ritesh Agarwal</h4>
+        </span>
+        <span class="inspiration">
+            <h3 class="cub_title">INSPIRATION</h3>
+            <h4 class="info">Nambi Narayanan</h4>
+        </span>
+        <span class="carrer_motto">
+            <h3 class="cub_title">Career Motto</h3>
+            <h4 class="info">"The only way to do great work is to love what you do." - Steve Jobs</h4>
+            <h4 class="info">"Opportunities don't happen, you create them." - Chris Grosser</h4>
+        </span>
+        <span class="soft_skills">
+            <h3>Soft skills</h3>
+            <h4>Adaptability</h4>
+            <h4>Emotional Intelligence</h4>
+            <h4>Decision making</h4>
+            <h4>Collaboration</h4>
+            <h4>Collaboration</h4>
+            <h4>Organization</h4>
+        </span>
+        <span class="interests">
+            <h3>Interests</h3>
+            <h4>Traveling</h4>
+            <h4>Coding</h4>
+            <h4>Food</h4>
+            <h4>Self improvement</h4>
+            <h4>Watching Movies</h4>
+        </span>
+    </div>
 </body>
 </html>
