--- a/projects.html
+++ b/projects.html
@@ -42,18 +42,18 @@
             </tr>
             <tr id = "tr_below" align="center" bgcolor = 'lightgray' height=60px style="font-family: 'Gill Sans', 'Gill Sans MT'; font-size: large;">
                 <td>DesktopApp Using Python EEL </td>
-                <td><a href="">Click</a></td>
+                <td><a href="">--</a></td>
                 <td><a href="https://github.com/Foxy-Ram/projects/blob/9d1fe5aa353386d60f599a5c6050212651fe996a/appToSave_Snooker_Users_data">Click</a></td>
             </tr>
             <tr id = "tr_below" align="center" bgcolor = 'lightgray' height=60px style="font-family: 'Gill Sans', 'Gill Sans MT'; font-size: large;">
-                <td>--</td>
-                <td><a href="">Click</a></td>
-                <td><a href="">Click</a></td>
+                <td>Text Generation Using Word Prediction</td>
+                <td><a href="">--</a></td>
+                <td><a href="https://github.com/Foxy-Ram/NLP_TGBNWP/tree/5ce004b55da99ec4876330f179d63dda6166a9ef/nextWordGeneration">Click</a></td>
             </tr>
             <tr id = "tr_below" align="center" bgcolor = 'lightgray' height=60px style="font-family: 'Gill Sans', 'Gill Sans MT'; font-size: large;">
-                <td>--</td>
-                <td><a href="">Click</a></td>
-                <td><a href="">Click</a></td>
+                <td colspan="1">Text Classification</td>
+                <td><a href="">--</a></td>
+                <td><a href="https://github.com/Foxy-Ram/projects/blob/f4c0c5eb039ad7f2b7a81b549316243b864df0d3/Text_Classification.ipynb">Click</a></td>
             </tr>
 
         </table>
