--- a/projects.html
+++ b/projects.html
@@ -51,9 +51,14 @@
                 <td><a href="https://github.com/Foxy-Ram/NLP_TGBNWP/tree/5ce004b55da99ec4876330f179d63dda6166a9ef/nextWordGeneration">Click</a></td>
             </tr>
             <tr id = "tr_below" align="center" bgcolor = 'lightgray' height=60px style="font-family: 'Gill Sans', 'Gill Sans MT'; font-size: large;">
-                <td colspan="1">Text Classification</td>
+                <td>Text Classification</td>
                 <td><a href="">--</a></td>
                 <td><a href="https://github.com/Foxy-Ram/projects/blob/f4c0c5eb039ad7f2b7a81b549316243b864df0d3/Text_Classification.ipynb">Click</a></td>
+            </tr>
+            <tr id = "tr_below" align="center" bgcolor = 'lightgray' height=60px style="font-family: 'Gill Sans', 'Gill Sans MT'; font-size: large;">
+                <td>English Phonetics Converter</td>
+                <td><a href="">--</a></td>
+                <td><a href="https://github.com/Foxy-Ram/EnglishPhoneticsConverter">Click</a></td>
             </tr>
 
         </table>
