--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Courier+Prime:ital,wght@0,400;0,700;1,400;1,700&family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
     
     <body>
+        <!-- Custom cursor -->
+        
+        <div class="cursor-dot" data-cursor-dot></div>
+        <div class="cursor-outline" data-cursor-outline></div>
+
+        <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
     <section class="profile">
         <div class="name">
             <div class="circle"></div>
