--- a/index.html
+++ b/index.html
@@ -163,9 +163,9 @@
             <h3><a class="source" href="https://github.com/Foxy-Ram/EnglishPhoneticsConverter.git">Source</a> <a class="presen" href="https://www.linkedin.com/posts/kalyan-ram-apt_python-flask-html-activity-7186557245231431680-4gsW?utm_source=share&utm_medium=member_desktop">Video</a></h3>
         </div>
         <div class="projects-col2" data-aos="fade-up">
-            <img src="projectImages/p0.png" alt="p8">
-            <h2 class="project-title">In Shortly</h2>
-            <h3><a class="source" href="">Source</a> <a class="presen" href="">Presentation</a></h3>
+            <img src="projectImages/p8.png" alt="p8">
+            <h2 class="project-title">Pet Name Generator LANG-CHAIN</h2>
+            <h3><a class="source" href="https://github.com/Foxy-Ram/Langchain-projects">Source</a> <a class="presen" href="https://www.linkedin.com/posts/kalyan-ram-apt_an-lang-chain-project-1-activity-7198978103291879424-s1An?utm_source=share&utm_medium=member_desktop">Post</a></h3>
         </div>
         <div class="projects-col3" data-aos="fade-up">
             <img src="projectImages/p0.png" alt="p9">
