--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--AOS animation-->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <!-- ubuntu | Afacad | Josefin Sans |  "Cedarville Cursive", cursive | "Courier Prime", monospace-->
+    <!-- ubuntu | Afacad | Josefin Sans |  "Cedarville Cursive", cursive | "Courier Prime", monospace -->
     
     <link href="https://fonts.googleapis.com/css2?family=Afacad&family=Anton&family=Caveat:wght@600&family=Dancing+Script:wght@600&family=Josefin+Sans:wght@300;400&family=Noto+Serif+TC:wght@300&family=PT+Serif:ital@1&family=Passion+One&family=Righteous&family=Ubuntu&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Afacad:wght@400;500&family=Anton&family=Caveat:wght@600&family=Dancing+Script:wght@600&family=Josefin+Sans:wght@300;400&family=Noto+Serif+TC:wght@300&family=PT+Serif:ital@1&family=Passion+One&family=Righteous&family=Ubuntu&display=swap" rel="stylesheet">
@@ -36,14 +36,19 @@
         
         <img src="pack/kalyan.jpeg" alt="kalyan">
 
-        <div class="about" data-aos="zoom-in-up" data-aos-duration="250">
-            <h1><span style="font-family: 'Cedarville Cursive', cursive;color:darkseagreen;">About</span> ME</h1>
-            <p>As a passionate Python enthusiast with a keen interest in Data Science, Machine Learning, and Web Technologies. Eager to expand expertise and skills in these areas to drive career growth. Demonstrated commitment to continuous learning and professional development. </p>
-            <p>Present I am pursuing a Bachelor's degree in Data Science driven by a profound interest.</p>
-            <p> For an hands on experience i avidly pursue knowledge and expertise through fabled platforms like coursera, youtube and others. Also by doing projects.</p>
+        <div class="eclosed_about">
+            <div class="about" data-aos="zoom-in-up" data-aos-duration="250">
+                <h1><span style="font-family: 'Cedarville Cursive', cursive;color:darkseagreen;">About</span> ME</h1>
+                <p>As a passionate Python enthusiast with a keen interest in Data Science, Machine Learning, and Web Technologies. Eager to expand expertise and skills in these areas to drive career growth. Demonstrated commitment to continuous learning and professional development. </p>
+                <p>Present I am pursuing a Bachelor's degree in Data Science driven by a profound interest.</p>
+                <p> For an hands on experience i avidly pursue knowledge and expertise through fabled platforms like coursera, youtube and others. Also by doing projects.</p>
+            </div>
         </div>
 
-        <h2 class="quote" data-aos="fade-up" data-aos-duration="350">READ LEARN <span style="color: red;">THINK</span> CREATE</h2>
+        <div class="enclosed_quote">
+            <h2 class="quote" data-aos="fade-up" data-aos-duration="350">READ LEARN <span style="color: red;">THINK</span> CREATE</h2>
+        </div>
+
     </section>
 
     <div class="skills">
@@ -196,6 +201,14 @@
         </a>
     </div>
 
+    <!-- MY STUFF and RECOMMENDATIONS -->
+    <div class="my_stuff">
+        <h1 class="title_msr">MY STUFF AND RECOMMENDATIONS</h1>
+        <div class="my_stuff_content">
+            <a class="content_a" href="content.html"><h2 class="content_click">CLICK HERE</h2></a>
+        </div>
+    </div>
+
     <!-- general script file -->
     <script src="index.js"></script>
     <!--AOS animation-->
@@ -205,6 +218,4 @@
     </script>
 </body>
 </html>
-
-
 
