--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     <div class="projects-row3">
         <div class="projects-col1" data-aos="fade-up">
             <img src="projectImages/p7.png" alt="p7">
-            <h2 class="project-title">English Phonetics Coverter</h2>
+            <h2 class="project-title">English Phonetics Converter</h2>
             <h3><a class="source" href="https://github.com/Foxy-Ram/EnglishPhoneticsConverter.git">Source</a> <a class="presen" href="https://www.linkedin.com/posts/kalyan-ram-apt_python-flask-html-activity-7186557245231431680-4gsW?utm_source=share&utm_medium=member_desktop">Video</a></h3>
         </div>
         <div class="projects-col2" data-aos="fade-up">
