--- a/index.html
+++ b/index.html
@@ -59,56 +59,56 @@
         <div class="programming-languages">
             <h2>Programming Languages</h2>
             <div class="pl-logos">
-                <img src="pack/pylogo.png" alt="py" data-aos="fade-up-right" data-aos-duration="250">
-                <img src="pack/sql.png" alt="sql" class="sql" data-aos="fade-up-right" data-aos-duration="250">
-                <img src="pack/javalang.png" alt="" class="java" data-aos="fade-up-left" data-aos-duration="250"> 
-                <img src="pack/clang.png" alt="" class="c" data-aos="fade-up-left" data-aos-duration="250">
+                <img title = "Python" src="pack/pylogo.png" alt="python" data-aos="fade-up-right" data-aos-duration="250">
+                <img title = "Sql" src="pack/sql.png" alt="sql" class="sql" data-aos="fade-up-right" data-aos-duration="250">
+                <img title = "Java" src="pack/javalang.png" alt="" class="java" data-aos="fade-up-left" data-aos-duration="250"> 
+                <img title = "C lang" src="pack/clang.png" alt="" class="c" data-aos="fade-up-left" data-aos-duration="250">
             </div>
         </div>
 
         <div class="web-tech">
             <h2>Web Technologies</h2>
             <div class="wt-logos">
-                <img src="pack/html.png" alt="html" data-aos="flip-left">
-                <img src="pack/css.png" alt="css" data-aos="flip-up">
-                <img src="pack/js.png" alt="js" data-aos="flip-right">
+                <img title = "Html" src="pack/html.png" alt="html" data-aos="flip-left">
+                <img title = "Css" src="pack/css.png" alt="css" data-aos="flip-up">
+                <img title = "Java script" src="pack/js.png" alt="js" data-aos="flip-right">
             </div>
         </div>
         <!--DS ML DL NLP-->
         <div class="dmdn">
             <h2>Ds Ml Dl Nlp</h2>
             <div class="dmdn-logos">
-                <img src="pack/numpy.png" alt="numpy" class="numpy" data-aos="fade-left">
-                <img src="pack/pandas.png" alt="pandas" class="pandas" data-aos="fade-left">
-                <img src="pack/sklearn.png" alt="sklearn" class="sklearn" data-aos="fade-left">
-                <img src="pack/tensorflow.png" alt="tensorflow" class="tensorflow" data-aos="fade-right">
-                <img src="pack/spacy.png" alt="spacy" class="spacy" data-aos="fade-right">
-                <img src="pack/gensim.png" alt="gensim" class="gensim" data-aos="fade-right">
+                <img title = "Numpy" src="pack/numpy.png" alt="numpy" class="numpy" data-aos="fade-left">
+                <img title = "Pandas" src="pack/pandas.png" alt="pandas" class="pandas" data-aos="fade-left">
+                <img title = "Sklearn" src="pack/sklearn.png" alt="sklearn" class="sklearn" data-aos="fade-left">
+                <img title = "Tensorflow" src="pack/tensorflow.png" alt="tensorflow" class="tensorflow" data-aos="fade-right">
+                <img title = "Spacy" src="pack/spacy.png" alt="spacy" class="spacy" data-aos="fade-right">
+                <img title = "Gensim" src="pack/gensim.png" alt="gensim" class="gensim" data-aos="fade-right">
             </div>
         </div>
 
         <div class="dv">
             <h2>Data Visualization</h2>
             <div class="dv-logos">
-                <img src="pack/matplotlib.svg" alt="matplotlib" data-aos="zoom-out">
-                <img src="pack/powerbi.png" alt="powerbi" data-aos="zoom-out">
-                <img src="pack/seaborn.svg" alt="seaborn" data-aos="zoom-out">
-                <img src="pack/plotly.png" alt="plotly" data-aos="zoom-out" class="plotly">
+                <img title = "Matplotlib" src="pack/matplotlib.svg" alt="matplotlib" data-aos="zoom-out">
+                <img title = "Powerbi" src="pack/powerbi.png" alt="powerbi" data-aos="zoom-out">
+                <img title = "Seaborn" src="pack/seaborn.svg" alt="seaborn" data-aos="zoom-out">
+                <img title = "Plotly" src="pack/plotly.png" alt="plotly" data-aos="zoom-out" class="plotly">
             </div>
         </div>
 
         <div class="ot">
             <h2>Other Tools</h2>
             <div class="ot-logos">
-                <img src="pack/excel.png" alt="excel" data-aos="flip-left" class="excel">
-                <img src="pack/git.svg" alt="git" data-aos="flip-right" class="git">
-                <img src="pack/github.png" alt="github" data-aos="flip-up" class="github">
-                <img src="pack/streamlit.png" alt="streamlit" data-aos="flip-down" class="streamlit">
-                <img src="pack/flask.svg" alt="flask" data-aos="flip-up" class="flask">
-                <img src="pack/fastapi.svg" alt="fastapi" data-aos="flip-down" class="fastapi">
-                <img src="pack/jupyter.png" alt="jupyter" data-aos="flip-up" class="jupyter">
-                <img src="pack/pycharm.png" alt="pycharm" data-aos="flip-left" class="pycharm">
-                <img src="pack/vscode.png" alt="vscode" data-aos="flip-right" class="vscode">
+                <img title = "Excel" src="pack/excel.png" alt="excel" data-aos="flip-left" class="excel">
+                <img title = "Git" src="pack/git.svg" alt="git" data-aos="flip-right" class="git">
+                <img title = "Github" src="pack/github.png" alt="github" data-aos="flip-up" class="github">
+                <img title = "Streamlit" src="pack/streamlit.png" alt="streamlit" data-aos="flip-down" class="streamlit">
+                <img title = "Flask" src="pack/flask.svg" alt="flask" data-aos="flip-up" class="flask">
+                <img title = "Fastapi" src="pack/fastapi.svg" alt="fastapi" data-aos="flip-down" class="fastapi">
+                <img title = "Jupyter" src="pack/jupyter.png" alt="jupyter" data-aos="flip-up" class="jupyter">
+                <img title = "Pycharm" src="pack/pycharm.png" alt="pycharm" data-aos="flip-left" class="pycharm">
+                <img title = "Vscode" src="pack/vscode.png" alt="vscode" data-aos="flip-right" class="vscode">
             </div>
         </div>
     </div>
