--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@
 
     <!-- MY STUFF and RECOMMENDATIONS -->
     <div class="my_stuff">
-        <h1 class="title_msr">MY STUFF AND RECOMMENDATIONS</h1>
+        <h1 class="title_msr" data-aos="fade">MY STUFF AND RECOMMENDATIONS</h1>
         <div class="my_stuff_content">
-            <a class="content_a" href="content.html"><h2 class="content_click">CLICK HERE</h2></a>
+            <a class="content_a" href="content.html"><h2 class="content_click" data-aos="zoom-in">CLICK HERE</h2></a>
         </div>
     </div>
 
